Add channel and category creation

--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,4 @@
 {
-    "token": "your token here",
+    "token": "Mzg5OTY2NzU3NzYwMzM1ODg0.DRDQog.PbjQ_-CEcVTtrilw3gbc0m2JHi8",
     "prefix": "!"
 }
