--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
         "precommit": "lint-staged"
     },
     "lint-staged": {
-        "*.js": ["npm run lint", "prettier --write", "git add"]
+        "*.js": [
+            "npm run lint",
+            "prettier --write",
+            "git add"
+        ]
     },
     "eslintConfig": {
         "parserOptions": {
@@ -31,8 +35,9 @@
     "author": "Josh Star",
     "license": "MIT",
     "dependencies": {
-        "discord.js": "^11.2.1",
+        "discord.js": "^11.3.2",
         "graphql-request": "^1.4.0",
+        "limax": "^1.6.0",
         "striptags": "^3.1.1",
         "to-markdown": "^3.1.0"
     },
